# SpinlockForcedAffinity

./: README.md
CoupledThread/: CMakeLists.txt  CoupledThread.cpp  CoupledThread.h
PerformanceExperiment/: CMakeLists.txt  CoupledThreadOOP.cpp  CoupledThreadOOP.h  UncoupledOOP.cpp  UncoupledOOP.h  globalMacro.h  main.cpp
Uncoupled/: CMakeLists.txt  Uncoupled.cpp  Uncoupled.h
